_includes/manuals/1.15/4.3.9_smartproxy_tftp.md

#### tftp.yml

Activate the TFTP management module within the Smart Proxy instance.  This is designed to manage files on a TFTP server, e.g. bootloaders for OS installation and PXE menu files.

The *tftproot* value is directory into which TFTP files are copied and then served from. The TFTP daemon will also be expected to chroot to this location. This component is only supported in a Unix environment.
<pre>
:enabled: https
:tftproot: /var/lib/tftpboot
:tftp_servername: name of your tftp server (used for next server value in your dhcp reservation) - defaults to the host name of your proxy.
</pre>

<div class="alert alert-info">The foreman-proxy user must have read/write access to the _tftpboot/pxelinux.cfg_ and _tftpboot/boot_ directories.</div>

#### Unattended installation

An essential first step in netbooting a system is preparing the TFTP server with the PXE configuration file and boot images.  This document assumes that you have already configured your DHCP infrastructure, either via manual configuration or through the DHCP smart proxy.

##### Setting Up the Proxy Server Host

Regardless of the filesystem setup is performed, you must also make sure you have the wget utility installed and in the default path.  *wget* is used to download OS specific installation when a given host is enabled for the build process.

##### Automatic Setup

Foreman includes a [TFTP server module](https://github.com/theforeman/puppet-foreman_proxy/blob/master/manifests/tftp.pp) that will perform all of the basic setup.  It defaults to TFTP root of */var/lib/tftpboot*, which may change if necessary.  You will still need to provide the basic TFTP load images in your TFTP root directory.  For vanilla PXE booting via PXELinux, this includes *pxelinux.0*, *menu.c32*, and *chain.c32*, for PXEGrub this includes *grub2/* and *grub/* subdirectories.

##### Manual Setup

The setup is very simple, and may be performed manually if desired.

1. The TFTP root directory must exist (we will use */var/lib/tftpboot* in this example).
2. Populate */var/lib/tftpboot* with PXE booting prerequisites. These can be taken from syslinux (usually in /usr/share/syslinux on RHEL) . At a minimum, this should include:
    * *pxelinux.0*
    * *menu.c32*
    * *chain.c32*
3. Populate the following prerequisites when PXE Grub bootloader is planned. These files can be found in OS distribution repositories, DVD/CD or packages (e.g. *grub2-efi* on Red Hats which installs into */boot/EFI*). Alternatively, these files can be built from modules using *grub2-mkimage* or *grub-mkimage* and signed for SecureBoot support.
    * */var/lib/tftpboot/grub2* with *grubx64.efi* or *grubia32.efi*
    * */var/lib/tftpboot/grub* with *bootx64.efi* or *bootia32.efi*
4. Create the directory */var/lib/tftpboot/boot* and make it writeable by the foreman proxy user (foreman-proxy, for instance, when installing through a rpm package).
5. Create the directory */var/lib/tftpboot/pxelinux.cfg* and make it writeable by the foreman proxy user (foreman-proxy).
6. Make sure */var/lib/tftpboot/grub* and */var/lib/tftpboot/grub2* are both writeable by the foreman proxy user (foreman-proxy).
7. Verify SELinux labels when using SELinux.

* Note: if CentOS 7 is used, please make sure to edit the URL under Hosts -> Installation Media, to to exclude the $minor version. For example: http://mirror.centos.org/centos/$major/os/$arch

##### Setting Up Foreman

In most cases, the default templates should work fine.  You do, however, need to make sure that a PXELinux or iPXE template is associated with your hosts.  See [Unattended Installations](http://projects.theforeman.org/projects/foreman/wiki/Unattended_installations) for details.  The template will be used to define the PXE configuration file when a host is enabled for build.

##### Workflow

This is a rough outline of the steps triggered on the TFTP smart proxy host when you click on the "Build" link for a host.

1. Call *mkdir -p /var/lib/tftpboot/pxelinux.cfg* if it does not already exist.
2. Create a host-specific TFTP configuration file in */var/lib/tftpboot/pxelinux.cfg/01-XX-XX-XX-XX-XX-XX*, named based off of the MAC address, using the associated PXE template.
3. Call *mkdir -p /var/lib/tftpboot/boot* if it does not already exist.
4. Download the OS specific kernel and initrd files using wget.
    1. The download URLs are derived from the installation media path, and OS specific log (see *app/models/redhat.rb* and *debian.rb* in foreman for examples of the gory details).
    2. The *debian.rb* file tries to guess if you want Ubuntu or Debian, based on the Name you give to your OS in the UI. If the name does not contain 'ubuntu' or 'debian', it may default to debian, hence fail to fetch the kernel/initrd.
    3. cd into /var/lib/tftpboot/boot and check that the filesizes are not zero. Check /var/log/foreman-proxy/proxy.log for possible errors.
5. The exact wget command is `wget --no-check-certificate -nv -c <src> -O "<destination>"`
6. At this point, the TFTP state is ready for the installation process.
7. Once the host has completed installation, the OS specific installation script should inform foreman by retrieving the built URL.
8. The host-specific TFTP configuration file is deleted.
9. The kernel and initrd are not deleted, but left in place for future installs of the same OS and architecture combination.  Please note that in the unlikely case that these files are modified, the simplistic freshness check of wget will likely get confused, corrupting the downloaded versions of the files.  If this happens, you should simply delete the files and let them be re-downloaded from scratch.

**To make sure that you trigger the above workflow make sure you've satisfied these requirements:**

1. at least 1 host is put in build mode
2. the host is using a subnet with a TFTP proxy

##### Limitations

At the moment, the proxy is not able to fetch boot files using NFS. As a workaround, expose your installation medium (or use a public mirror) over http/ftp to configure one machine with the required boot files. Alternatively, you can still use NFS, but manual steps are required to make boot files available to your proxy:

1. create a Medium: path - nfs://nfs-server/nfs-medium
2. create Operating System: name - Custom, version - 7, Architecture - x86_64, add installation medium created in previous step
3. copy images/pxeboot/initrd.img and images/pxeboot/vmlinuz from your NFS-shared medium to /var/lib/tftpboot/boot on your proxy. Make sure the newly copied files have names corresponding to your OS (Custom-7-x86_64-initrd.img and Custom-7-x86_64-vmlinuz for OS created in step 2). Files should be owned by foreman-proxy user and have 544 permissions.
4. try to provision a new host with your NFS medium. When everything is configured correctly, proxy will serve the files you just copied and installer will mount the NFS medium for installation.

To implement fully automatic installations from NFS, it would require to teach proxy how to mount NFS. We track it as #19045
